[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://pMissile.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/air_sprites/air_units/f35.png" type="Texture" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 0.552941, 0.360784, 0.419608, 0.6, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.05
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 165.5
angle_random = 1.0
scale = 8.0
scale_random = 1.0
color_ramp = SubResource( 2 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 10, -288 )
collision_mask = 15
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
projectile = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="missilePoint" type="Position2D" parent="Sprite"]
position = Vector2( 0, 6 )

[node name="Particles2D" type="Particles2D" parent="Sprite"]
position = Vector2( -26, 2 )
lifetime = 0.2
local_coords = false
process_material = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 6016
limit_bottom = 1080
drag_margin_left = 0.0
drag_margin_top = 0.33
drag_margin_right = 0.0
drag_margin_bottom = 0.33
__meta__ = {
"_edit_lock_": true
}

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -26, -10, -16, -10, -8, 0, 12, 0, 14, -2, 18, -2, 24, 4, 20, 6, -24, 6, -24, -4 )
__meta__ = {
"_edit_lock_": true
}

[node name="deathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 4 )]
[connection signal="update_hud_mission_status_text" from="." to="CanvasLayer/HUD" method="_on_Player_update_hud_mission_status_text"]
[connection signal="update_hud_score" from="." to="CanvasLayer/HUD" method="_on_Player_update_hud_score"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]
